--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       POSTGRES_DB: crm_db
     volumes:
       - ./data:/data
+      - ./queries:/queries
       - ./init:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
